--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>nevik</groupId>
-	<artifactId>auto-differentiation</artifactId>
+	<artifactId>autodiff</artifactId>
 	<version>0.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
